Fix some bugs.
Fix bug with horizontal scroll on small screen.
Fix bug with searching throug non-inforamtive fields.

--- a/src/app/components/app.component.scss
+++ b/src/app/components/app.component.scss
@@ -6,6 +6,7 @@ $sidebar-width: 37rem;
 
 .app-layout {
   @include outer-container;
+  overflow-x: hidden;
   height: 100vh;
 
   .navbar {
